before yarn eject

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -23,9 +23,9 @@
   pointer-events: none;
 }
 
-/*.App {*/
-  /*text-align: center;*/
-/*}*/
+.App {
+  text-align: center;
+}
 
 /*.App-logo {*/
   /*animation: App-logo-spin infinite 20s linear;*/
