--- a/src/css/App.css
+++ b/src/css/App.css
@@ -27,23 +27,53 @@
   text-align: center;
 }
 
-/*.App-logo {*/
-  /*animation: App-logo-spin infinite 20s linear;*/
-  /*height: 80px;*/
-/*}*/
+.width {
+  width: 870px;
+  margin: 0 auto;
+}
 
-/*.App-header {*/
-  /*background-color: #222;*/
-  /*height: 150px;*/
-  /*padding: 20px;*/
-  /*color: white;*/
-/*}*/
+#intro {
+  background-color: var(--contrast);
+  height: 300px;
+  width: 100%;
+  color: white;
+  display: flex;
+  justify-content: center;
+  text-align: left;
+  flex-direction: column;
+}
 
-/*.App-intro {*/
-  /*font-size: large;*/
-/*}*/
+#intro h2 {
+  color: white;
+  font-size: 48px;
+  text-align: left;
+  max-width: 700px;
+  margin-bottom: 30px;
+}
 
-/*@keyframes App-logo-spin {*/
-  /*from { transform: rotate(0deg); }*/
-  /*to { transform: rotate(360deg); }*/
-/*}*/
+#intro h3 {
+  font-size: 16px;
+  color: white;
+  text-align: left;
+  font-weight: normal;
+}
+
+#intro a {
+  color: white;
+}
+
+#intro a:hover {
+  color: whitesmoke;
+}
+
+.section {
+  margin: 40px 0;
+}
+
+.spacer {
+  margin: 0 10px;
+}
+
+#bubbles {
+  margin: 20px 0;
+}
