--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,3 +3,14 @@ body {
   padding: 0;
   font-family: var(--main-font);
 }
+
+h2 {
+  font-size: larger;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+h4 {
+  margin-bottom: 10px;
+}
+
