--- a/src/css/dendrogram.css
+++ b/src/css/dendrogram.css
@@ -1,10 +1,9 @@
 .node circle {
-    fill: #999;
+    fill: var(--secondary-color);
 }
 
 .node text {
-    font: 12px sans-serif;
-    color: var(--secondary-color);
+
 }
 
 .node--internal circle {
@@ -12,21 +11,21 @@
 }
 
 .node--internal text {
-    text-shadow: 0 1px 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff;
-}
-
-.node--leaf text {
-    color: var(--secondary-color);
+    /*text-shadow: 0 1px 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff;*/
 }
 
 .link {
     fill: none;
     stroke: var(--secondary-color);
-    stroke-opacity: 0.6;
-    stroke-width: 1.5px;
+    stroke-opacity: 0.4;
+    stroke-width: 3px;
 }
 
-#dendro-svg {
-    background-color: var(--main-color);
-    padding: 20px;
+.dendro-graph {
+    background: var(--main-color);
+}
+
+.religion-graph {
+    background: #9271aa;
+    margin-bottom: 100px;
 }
