--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,11 +13,10 @@ h2 {
 
 p {
   margin: 15px 0;
+  color: var(--text);
 }
 
 .intro-text {
   font-size: 16px;
   font-family: var(--main-font);
-  color: grey;
-  /*TODO: vertical whitepsace around images, intro text styling, separate CTAs*/
 }
